--- a/Kubernetes-Manifests-file/Backend/deployment.yaml
+++ b/Kubernetes-Manifests-file/Backend/deployment.yaml
@@ -6,6 +6,7 @@ metadata:
   labels: 
     role: api
     env: demo
+    app: api
 spec: 
   replicas: 2
   strategy: 
@@ -15,17 +16,19 @@ spec:
       maxUnavailable: 25%
   selector: 
     matchLabels:
+      app: api
       role: api
   template:
     metadata:
       labels:
         role: api
+        app: api
     spec:
       imagePullSecrets:
       - name: ecr-registry-secret
       containers:
       - name: api
-        image: 407622020962.dkr.ecr.us-east-1.amazonaws.com/backend:latest
+        image: public.ecr.aws/h8o2t3i8/three-tier-backend:latest
         imagePullPolicy: Always
         env:
           - name: MONGO_CONN_STR
